@@ -21,6 +21,7 @@ Version 0.3r
 * New TF items added to Jeanne:
  - Fertilium.
  - Virilium.
+* You can now save/sleep at the penthouse after befriending the twins. This gives you another free safe spot in Rigard.
 
 --------------------------------------------
              PREVIOUS VERSIONS
